--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -1,18 +1,4 @@
 <resources>
-    <string name="google_maps_key_instructions" templateMergeStrategy="replace"><!--
-
-    TODO: Before you run your application, you need a Google Maps API key.
-
-    To get one, follow this link, follow the directions and press "Create" at the end:
-
-https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=25:77:67:A2:DE:FC:C8:18:D2:3A:27:D9:9C:71:43:C4:AA:22:2D:5D%3Bde.jbossi.geolarm
-
-    You can also add your credentials to an existing key, using this line:
-    25:77:67:A2:DE:FC:C8:18:D2:3A:27:D9:9C:71:43:C4:AA:22:2D:5D;de.jbossi.geolarm
-
-    Once you have your key (it starts with "AIza"), replace the "google_maps_key"
-    string in this file.
-    --></string>
-
+    <string name="google_maps_key_instructions" templateMergeStrategy="replace" />
     <string name="google_maps_key" templateMergeStrategy="preserve">AIzaSyD9gIM3Kn08hMOoEjR3z05TO3i34oBkdaM</string>
 </resources>
