--- a/app/src/main/res/drawable-v21/ripple.xml
+++ b/app/src/main/res/drawable-v21/ripple.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ripple xmlns:android="http://schemas.android.com/apk/res/android" android:color="@color/colorPrimary">
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="@color/primary">
     <item>
         <shape android:shape="oval">
-            <solid android:color="@color/colorPrimary" />
+            <solid android:color="@color/primary" />
         </shape>
     </item>
 </ripple>
