--- a/app/src/main/res/layout/set_alarm_dialog.xml
+++ b/app/src/main/res/layout/set_alarm_dialog.xml
@@ -2,12 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="de.jbossi.geolarm.SetAlarmFragment">
+    tools:context="de.jbossi.geolarm.SetAlarmDialog">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:text="@string/choose_alarm_distance"
+        android:textColor="@color/accent_material_dark" />
 
 </FrameLayout>
