--- a/app/src/main/res/layout/set_alarm_dialog.xml
+++ b/app/src/main/res/layout/set_alarm_dialog.xml
@@ -1,8 +1,9 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="de.jbossi.geolarm.SetAlarmDialog">
+    tools:context="de.jbossi.geolarm.SetAlarmDialog"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
@@ -10,4 +11,10 @@
         android:text="@string/choose_alarm_distance"
         android:textColor="@color/accent_material_dark" />
 
-</FrameLayout>
+    <EditText
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/locationText"
+        android:layout_marginTop="20dp" />
+
+</LinearLayout>
