--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -7,7 +7,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Alarm ausschalten"
+        android:text="@string/shutdown_alarm"
         android:id="@+id/shutdownAlarmButton"
         android:layout_gravity="bottom|center_horizontal" />
 </LinearLayout>
