--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -17,6 +17,7 @@
         android:background="@drawable/ripple"
         android:stateListAnimator="@anim/animation"
         android:src="@drawable/ic_add_alarm"
-        android:elevation="4dp" />
+        android:elevation="4dp"
+        android:contentDescription="@string/add_alarm" />
 
 </fragment>
