--- a/app/src/main/res/layout/set_alarm_dialog.xml
+++ b/app/src/main/res/layout/set_alarm_dialog.xml
@@ -14,6 +14,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/locationText"
-        android:layout_marginTop="20dp" />
+        android:layout_marginTop="20dp"
+        android:inputType="textPostalAddress" />
 
 </LinearLayout>
