--- a/app/src/main/res/menu/maps_activity_actions.xml
+++ b/app/src/main/res/menu/maps_activity_actions.xml
@@ -9,9 +9,9 @@
     <item
         android:id="@+id/action_list"
         android:icon="@drawable/ic_action_list"
-        android:title="@string/add_alarm"
+        android:title="@string/show_list"
 
-        geolarm:showAsAction="always" />
+        geolarm:showAsAction="withText" />
     <item android:id="@+id/action_settings"
         android:title="@string/settings"
         geolarm:showAsAction="never" />
