Changed ListView to Recycler View Missing Files

--- a/app/src/main/res/layout/set_alarm_dialog.xml
+++ b/app/src/main/res/layout/set_alarm_dialog.xml
@@ -2,11 +2,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+    android:padding="10pt"
     android:orientation="vertical">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/choose_alarm_distance"
         android:textColor="@color/accent_material_dark" />
@@ -14,7 +14,7 @@
     <com.rey.material.widget.Slider
         style="@style/Material.Widget.Slider.Discrete"
         android:id="@+id/setAlarmDialog_Distance"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         app:sl_minValue="10"
@@ -25,7 +25,7 @@
 
     <TextView
         android:id="@+id/setAlarmDialog_Location"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp" />
 
