--- a/app/src/main/res/layout/listitem_alarm.xml
+++ b/app/src/main/res/layout/listitem_alarm.xml
@@ -2,10 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="10pt">
 
-
-<TextView
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
@@ -37,6 +37,5 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
 
         android:id="@+id/item_distance"
-        android:layout_below="@+id/item_name"
-        android:layout_toEndOf="@+id/item_place" />
+        android:layout_below="@+id/item_place" />
 </RelativeLayout>
